--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>S3CUR1TY NOMIC Validator</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>S3CUR1TY <strong>NOMIC</strong> Validator hosted on Azure with DDoS Protection and Microsoft Defender for Cloud protection</p>
   </body>
 </html>
